--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "vuera",
-  "version": "0.0.1-rc.1",
-  "main": "dist/vuera.js",
+  "version": "0.0.1-rc.2",
+  "main": "dist/vuera.cjs.js",
+  "modules": "dist/vuera.es.js",
   "license": "MIT",
+  "keywords": ["vue", "react", "interop", "adapter"],
   "peerDependencies": {
     "react": ">= 15",
     "react-dom": ">= 15",
