--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,21 @@ language: node_js
 node_js:
   - node
   - '8'
-  - '7'
 cache: yarn
+env:
+  matrix:
+    - REACT_VERSION=15.2.0
+    - REACT_VERSION=15.6.1
+    - REACT_VERSION=16.0.0
+    - VUE_VERSION=2.2.0
+    - VUE_VERSION=2.3.4
+    - VUE_VERSION=2.4.4
+install:
+  - yarn install
+  - yarn add -D react@$REACT_VERSION
+  - yarn add -D react-dom@$REACT_VERSION
+  - yarn add -D vue@$VUE_VERSION
+  - yarn add -D vue-template-compiler@$VUE_VERSION
 
 branches:
   only:
