--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-vue": "^2.1.0",
+    "husky": "^0.14.3",
     "jest": "^21.2.1",
     "jest-vue-preprocessor": "1.2.0",
+    "lint-staged": "^4.2.3",
     "prettier": "^1.7.2",
     "react": "16",
     "react-dom": "16",
@@ -51,6 +53,10 @@
     "build": "BABEL_ENV=rollup rollup -c",
     "lint": "eslint .",
     "test": "BABEL_ENV=test jest",
-    "test:watch": "yarn run test -- --watch"
+    "test:watch": "yarn run test -- --watch",
+    "precommit": "lint-staged && yarn run build"
+  },
+  "lint-staged": {
+    "*.{js,json}": ["prettier --write", "git add"]
   }
 }
