--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "rollup": "^0.50.0",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "vue": "^2.4.4",
-    "vue-template-compiler": "^2.4.4",
+    "vue": "2.4.4",
+    "vue-template-compiler": "2.4.4",
     "vue-template-es2015-compiler": "^1.5.3"
   },
   "scripts": {
