Add tests for unmounting components

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "vuera",
   "version": "0.1.0-rc.1",
+  "repository": "akxcv/vuera",
+  "author": "Alexander Komarov <ak@akxcv.com>",
+  "license": "MIT",
   "main": "dist/vuera.cjs.js",
   "modules": "dist/vuera.es.js",
-  "license": "MIT",
+  "files": ["dist"],
   "keywords": [
     "vue",
     "react",
