Set up coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ install:
   - yarn add -D react-dom@$REACT_VERSION
   - yarn add -D vue@$VUE_VERSION
   - yarn add -D vue-template-compiler@$VUE_VERSION
+build:
+  - yarn run test:coverage -- --coverageReporters=lcov
+  - cat ./coverage/lcov.info | yarn run coveralls
 
 branches:
   only:
