--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - yarn add -D react-dom@$REACT_VERSION
   - yarn add -D vue@$VUE_VERSION
   - yarn add -D vue-template-compiler@$VUE_VERSION
-build:
+script:
   - yarn run test:coverage -- --coverageReporters=lcov
   - cat ./coverage/lcov.info | yarn run coveralls
 
