--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuera",
-  "version": "0.1.0-rc.2",
+  "version": "0.1.0",
   "repository": "akxcv/vuera",
   "author": "Alexander Komarov <ak@akxcv.com>",
   "license": "MIT",
