[ci skip] Add description to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vuera",
+  "description": "Use React in Vue and Vue in React",
   "version": "0.1.1",
   "repository": "akxcv/vuera",
   "author": "Alexander Komarov <ak@akxcv.com>",
