--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "coveralls": "^3.0.0",
+    "cross-env": "^5.2.0",
     "eslint": "3.19.0",
     "eslint-config-umbrellio": "^0.4.5",
     "eslint-plugin-import": "^2.7.0",
@@ -49,9 +50,9 @@
     "vue-template-es2015-compiler": "^1.5.3"
   },
   "scripts": {
-    "build": "BABEL_ENV=rollup rollup -c",
+    "build": "cross-env BABEL_ENV=rollup rollup -c",
     "lint": "eslint .",
-    "test": "BABEL_ENV=test jest",
+    "test": "cross-env BABEL_ENV=test jest",
     "test:coverage": "yarn run test -- --coverage",
     "test:watch": "yarn run test -- --watch",
     "precommit": "lint-staged && yarn run build && git add dist"
