update packages & add a test for React hooks

--- a/.babelrc
+++ b/.babelrc
@@ -1,23 +1,24 @@
 {
   "presets": [
     [
-      "latest",
+      "@babel/preset-env",
       {
-        "es2015": {
-          "modules": false
-        }
+        "modules": false
       }
     ],
-    "react"
+    "@babel/preset-react"
   ],
-  "plugins": ["transform-object-rest-spread", "transform-class-properties"],
+  "plugins": [
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-proposal-class-properties"
+  ],
   "env": {
     "rollup": {
       "plugins": ["external-helpers"]
     },
     "test": {
-      "presets": ["es2015"],
-      "plugins": ["transform-class-properties"]
+      "presets": ["@babel/preset-env"],
+      "plugins": ["@babel/plugin-proposal-class-properties"]
     }
   }
 }
