--- a/package.json
+++ b/package.json
@@ -8,45 +8,58 @@
   "main": "dist/vuera.cjs.js",
   "modules": "dist/vuera.es.js",
   "unpkg": "dist/vuera.iife.js",
-  "files": ["dist", "babel.js"],
-  "keywords": ["vue", "react", "interop", "adapter", "migrate", "seamless-integration"],
+  "files": [
+    "dist",
+    "babel.js"
+  ],
+  "keywords": [
+    "vue",
+    "react",
+    "interop",
+    "adapter",
+    "migrate",
+    "seamless-integration"
+  ],
   "peerDependencies": {
     "react": ">= 15.2.0",
     "react-dom": ">= 15.2.0",
     "vue": ">= 2.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-jest": "^21.2.0",
+    "@babel/core": "^7.11.1",
+    "@babel/parser": "^7.11.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.3.0",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "browser-resolve": "^2.0.0",
     "coveralls": "^3.0.0",
-    "cross-env": "^5.2.0",
-    "eslint": "3.19.0",
-    "eslint-config-umbrellio": "^0.4.5",
+    "cross-env": "^7.0.2",
+    "eslint": "7.6.0",
+    "eslint-config-umbrellio": "^5.0.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-object-spread": "^1.2.1",
-    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.4.0",
-    "eslint-plugin-vue": "^2.1.0",
-    "husky": "^0.14.3",
-    "jest": "^21.2.1",
-    "jest-vue-preprocessor": "1.2.0",
-    "lint-staged": "^4.2.3",
-    "prettier": "^1.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "husky": "^4.2.5",
+    "jest": "^26.3.0",
+    "jest-vue-preprocessor": "1.7.1",
+    "lint-staged": "^10.2.11",
+    "prettier": "^2.0.5",
     "react": "16",
     "react-dom": "16",
-    "rollup": "0.51",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "vue": "2.5",
-    "vue-template-compiler": "2.5",
+    "rollup": "2.23.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "typescript": "^3.9.7",
+    "vue": "2.6.11",
+    "vue-template-compiler": "2.6.11",
     "vue-template-es2015-compiler": "^1.5.3"
   },
   "scripts": {
@@ -58,10 +71,29 @@
     "precommit": "lint-staged && yarn run build && git add dist"
   },
   "lint-staged": {
-    "*.json": ["prettier --write", "git add"],
-    "src/**/*.js": ["prettier --write", "eslint --fix", "git add"],
-    "tests/**/*.js": ["prettier --write", "eslint --fix", "git add"],
-    "/*.js": ["prettier --write", "eslint --fix", "git add"],
-    "babel.js": ["prettier --write", "eslint --fix", "git add"]
+    "*.json": [
+      "prettier --write",
+      "git add"
+    ],
+    "src/**/*.js": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "tests/**/*.js": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "/*.js": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "babel.js": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
