feat: require React 16.8 use Fragment,upgrade deps

--- a/.babelrc
+++ b/.babelrc
@@ -1,23 +1,19 @@
 {
   "presets": [
     [
-      "latest",
+      "@babel/preset-env",
       {
-        "es2015": {
-          "modules": false
-        }
+        "targets": "last 2 versions, not dead, not ie 11"
       }
     ],
-    "react"
+    "@babel/preset-react"
   ],
-  "plugins": ["transform-object-rest-spread", "transform-class-properties"],
   "env": {
     "rollup": {
-      "plugins": ["external-helpers"]
+      "plugins": ["@babel/plugin-external-helpers"]
     },
     "test": {
-      "presets": ["es2015"],
-      "plugins": ["transform-class-properties"]
+      "presets": ["@babel/preset-env"]
     }
   }
 }
