--- a/.babelrc
+++ b/.babelrc
@@ -10,7 +10,7 @@
   ],
   "env": {
     "rollup": {
-      "plugins": ["@babel/plugin-external-helpers"]
+      // "plugins": ["@babel/plugin-external-helpers"]
     },
     "test": {
       "presets": ["@babel/preset-env"]
