Moves vuera to typescript

--- a/package.json
+++ b/package.json
@@ -1,56 +1,40 @@
 {
   "name": "vuera",
   "description": "Use React in Vue and Vue in React",
-  "version": "0.2.7",
+  "version": "1.0.0",
   "repository": "akxcv/vuera",
   "author": "Alexander Komarov <ak@akxcv.com>",
   "license": "MIT",
-  "main": "dist/vuera.cjs.js",
-  "modules": "dist/vuera.es.js",
-  "unpkg": "dist/vuera.iife.js",
-  "files": ["dist", "babel.js"],
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/esm/index.d.ts",
+  "files": ["dist"],
   "keywords": ["vue", "react", "interop", "adapter", "migrate", "seamless-integration"],
   "peerDependencies": {
-    "react": ">= 15.2.0",
-    "react-dom": ">= 15.2.0",
+    "@types/react": ">=16",
+    "@types/react-dom": ">=16",
+    "react": ">= 16",
+    "react-dom": ">= 16",
     "vue": ">= 2.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
+    "@typescript-eslint/parser": "^5.12.0",
+    "@types/react": "16",
+    "@types/react-dom": "16",
     "babel-jest": "^21.2.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "coveralls": "^3.0.0",
-    "cross-env": "^5.2.0",
-    "eslint": "3.19.0",
-    "eslint-config-umbrellio": "^0.4.5",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-prefer-object-spread": "^1.2.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.4.0",
-    "eslint-plugin-vue": "^2.1.0",
+    "microbundle": "^0.14.2",
+    "typescript": "^4.5.5",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
-    "jest-vue-preprocessor": "1.2.0",
-    "lint-staged": "^4.2.3",
-    "prettier": "^1.7.2",
     "react": "16",
     "react-dom": "16",
-    "rollup": "0.51",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "vue": "2.5",
-    "vue-template-compiler": "2.5",
-    "vue-template-es2015-compiler": "^1.5.3"
+    "lint-staged": "^4.2.3",
+    "prettier": "^1.7.2",
+    "vue": "2.5"
   },
   "scripts": {
-    "build": "cross-env BABEL_ENV=rollup rollup -c",
+    "build": "microbundle",
+    "dev": "microbundle watch",
     "lint": "eslint .",
     "test": "cross-env BABEL_ENV=test jest",
     "test:coverage": "yarn run test -- --coverage",
@@ -61,7 +45,6 @@
     "*.json": ["prettier --write", "git add"],
     "src/**/*.js": ["prettier --write", "eslint --fix", "git add"],
     "tests/**/*.js": ["prettier --write", "eslint --fix", "git add"],
-    "/*.js": ["prettier --write", "eslint --fix", "git add"],
-    "babel.js": ["prettier --write", "eslint --fix", "git add"]
+    "/*.js": ["prettier --write", "eslint --fix", "git add"]
   }
 }
